--- a/org.eclipse.rcpl.plugin.tools/.project
+++ b/org.eclipse.rcpl.plugin.tools/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>org.eclipse.rcpl.plugin.tools</name>
+	<name>org.eclipse.rcpl.addon.tools</name>
 	<comment></comment>
 	<projects>
 	</projects>
