--- a/org.eclipse.rcpl.core/pom.xml
+++ b/org.eclipse.rcpl.core/pom.xml
@@ -58,5 +58,10 @@
 			<artifactId>commons-codec</artifactId>
 			<version>1.10</version>
 		</dependency>
+		<dependency>
+			<groupId>org.jsoup</groupId>
+			<artifactId>jsoup</artifactId>
+			<version>1.11.3</version>
+		</dependency>
 	</dependencies>
 </project>
