--- a/org.eclipse.rcpl.model_2_0_0.edit/plugin.properties
+++ b/org.eclipse.rcpl.model_2_0_0.edit/plugin.properties
@@ -2090,3 +2090,10 @@ _UI_Addon_isPerspective_feature = Is Perspective
 _UI_Addon_readOnly_feature = Read Only
 _UI_Addon_defaultPerspective_feature = Default Perspective
 _UI_Addon_perspectives_feature = Perspectives
+_UI_QuickToolBar_tools_feature = Tools
+_UI_RibbonToolBar_type = Ribbon Tool Bar
+_UI_Perspective_ribbonToolBar_feature = Ribbon Tool Bar
+_UI_RibbonToolBar_toolGroups_feature = Tool Groups
+_UI_RibbonToolBar_tools_feature = Tools
+_UI_TopToolBar_tools_feature = Tools
+_UI_SideToolBar_tools_feature = Tools
