--- a/org.eclipse.rcpl.model_2_0_0.edit/plugin.properties
+++ b/org.eclipse.rcpl.model_2_0_0.edit/plugin.properties
@@ -2097,3 +2097,11 @@ _UI_RibbonToolBar_toolGroups_feature = Tool Groups
 _UI_RibbonToolBar_tools_feature = Tools
 _UI_TopToolBar_tools_feature = Tools
 _UI_SideToolBar_tools_feature = Tools
+_UI_CaptionToolBar_type = Caption Tool Bar
+_UI_Perspective_captionToolBar_feature = Caption Tool Bar
+_UI_CaptionToolBar_toolGroups_feature = Tool Groups
+_UI_CaptionToolBar_tools_feature = Tools
+_UI_HomePages_type = Home Pages
+_UI_HomePage_type = Home Page
+_UI_RCPL_homepages_feature = Homepages
+_UI_HomePages_homepage_feature = Homepage
