--- a/org.eclipse.rcpl.model_2_0_0.edit/plugin.properties
+++ b/org.eclipse.rcpl.model_2_0_0.edit/plugin.properties
@@ -2105,3 +2105,34 @@ _UI_HomePages_type = Home Pages
 _UI_HomePage_type = Home Page
 _UI_RCPL_homepages_feature = Homepages
 _UI_HomePages_homepage_feature = Homepage
+_UI_HomePages_homepages_feature = Homepages
+_UI_Documents_type = Documents
+_UI_Document_type = Document
+_UI_RCPL_documents_feature = Documents
+_UI_HomePages_children_feature = Children
+_UI_HomePage_type_feature = Type
+_UI_Documents_children_feature = Children
+_UI_Document_path_feature = Path
+_UI_Document_type_feature = Type
+_UI_HomePageType_WEBSITE_literal = WEBSITE
+_UI_HomePageType_PDF_literal = PDF
+_UI_HomePageType_WORD_literal = WORD
+_UI_HomePageType_EXCEL_literal = EXCEL
+_UI_HomePageType_POWERPOINT_literal = POWERPOINT
+_UI_HomePageType_WELCOME_literal = WELCOME
+_UI_HomePageType_SAMPLES_literal = SAMPLES
+_UI_HomePageType_CONTACT_US_literal = CONTACT_US
+_UI_HomePageType_NEWS_literal = NEWS
+_UI_HomePageType_OVERVIEW_literal = OVERVIEW
+_UI_HomePageType_PERSPECTIVES_literal = PERSPECTIVES
+_UI_HomePageType_PREFERENCES_literal = PREFERENCES
+_UI_HomePageType_ABOUT_literal = ABOUT
+_UI_HomePageType_CUSTOM_literal = CUSTOM
+_UI_DocumentType_WORD_literal = WORD
+_UI_DocumentType_EXCEL_literal = EXCEL
+_UI_DocumentType_POWERPOINT_literal = POWERPOINT
+_UI_DocumentType_HTML_literal = HTML
+_UI_DocumentType_PDF_literal = PDF
+_UI_DocumentType_IMAGE_literal = IMAGE
+_UI_DocumentType_TEXT_literal = TEXT
+_UI_HomePage_perspective_feature = Perspective
