--- a/org.eclipse.rcpl.model_2_0_0.edit/plugin.properties
+++ b/org.eclipse.rcpl.model_2_0_0.edit/plugin.properties
@@ -2136,3 +2136,12 @@ _UI_DocumentType_PDF_literal = PDF
 _UI_DocumentType_IMAGE_literal = IMAGE
 _UI_DocumentType_TEXT_literal = TEXT
 _UI_HomePage_perspective_feature = Perspective
+_UI_HomePage_textReplacements_feature = Text Replacements
+_UI_HomePage_document_feature = Document
+_UI_KeyValue_type = Key Value
+_UI_KeyValue_key_feature = Key
+_UI_KeyValue_value_feature = Value
+_UI_KeyValues_type = Key Values
+_UI_RCPL_keyvalues_feature = Keyvalues
+_UI_HomePage_documents_feature = Documents
+_UI_KeyValues_keyvalues_feature = Keyvalues
