--- a/org.eclipse.rcpl.model_2_0_0.edit/plugin.properties
+++ b/org.eclipse.rcpl.model_2_0_0.edit/plugin.properties
@@ -2145,3 +2145,12 @@ _UI_KeyValues_type = Key Values
 _UI_RCPL_keyvalues_feature = Keyvalues
 _UI_HomePage_documents_feature = Documents
 _UI_KeyValues_keyvalues_feature = Keyvalues
+_UI_HomePageType_NEW_literal = NEW
+_UI_HomePageType_WHATS_NEW_literal = WHATS_NEW
+_UI_HomePageType_DOCUMENT_literal = DOCUMENT
+_UI_HomePageType_HTML_EDITOR_literal = HTML_EDITOR
+_UI_HomePageType_HOME_literal = HOME
+_UI_HomePageType_TEMPLATES_literal = TEMPLATES
+_UI_HomePageType_TUTORIALS_literal = TUTORIALS
+_UI_HomePageType_HELP_literal = HELP
+_UI_HomePageType_DONATIONS_literal = DONATIONS
