--- a/org.eclipse.rcpl.model_2_0_0.edit/plugin.properties
+++ b/org.eclipse.rcpl.model_2_0_0.edit/plugin.properties
@@ -2154,3 +2154,6 @@ _UI_HomePageType_TEMPLATES_literal = TEMPLATES
 _UI_HomePageType_TUTORIALS_literal = TUTORIALS
 _UI_HomePageType_HELP_literal = HELP
 _UI_HomePageType_DONATIONS_literal = DONATIONS
+_UI_RCPL_imageUrls_feature = Image Urls
+_UI_RCPL_ServiceClasses_feature = Service Classes
+_UI_RCPL_homeURL_feature = Home URL
