--- a/org.eclipse.rcpl.model_2_0_0.edit/plugin.properties
+++ b/org.eclipse.rcpl.model_2_0_0.edit/plugin.properties
@@ -2157,3 +2157,4 @@ _UI_HomePageType_DONATIONS_literal = DONATIONS
 _UI_RCPL_imageUrls_feature = Image Urls
 _UI_RCPL_ServiceClasses_feature = Service Classes
 _UI_RCPL_homeURL_feature = Home URL
+_UI_HomePage_navigator_feature = Navigator
