--- a/org.eclipse.rcpl.model_2_0_0.edit/plugin.properties
+++ b/org.eclipse.rcpl.model_2_0_0.edit/plugin.properties
@@ -2159,3 +2159,6 @@ _UI_RCPL_ServiceClasses_feature = Service Classes
 _UI_RCPL_homeURL_feature = Home URL
 _UI_HomePage_navigator_feature = Navigator
 _UI_HomePage_showHomePageButtons_feature = Show Home Page Buttons
+_UI_HomePage_rootClassName_feature = Root Class Name
+_UI_Addon_rootClassName_feature = Root Class Name
+_UI_HomePageType_TOOLS_EDITOR_literal = TOOLS_EDITOR
