--- a/org.eclipse.rcpl.core/.classpath
+++ b/org.eclipse.rcpl.core/.classpath
@@ -23,6 +23,7 @@
 		</attributes>
 		<accessrules>
 			<accessrule kind="accessible" pattern="javax/**"/>
+			<accessrule kind="accessible" pattern="com.sun/**"/>
 		</accessrules>
 	</classpathentry>
 	<classpathentry kind="output" path="target/classes"/>
