--- a/org.eclipse.rcpl.model_2_0_0.edit/plugin.properties
+++ b/org.eclipse.rcpl.model_2_0_0.edit/plugin.properties
@@ -2162,3 +2162,4 @@ _UI_HomePage_showHomePageButtons_feature = Show Home Page Buttons
 _UI_HomePage_rootClassName_feature = Root Class Name
 _UI_Addon_rootClassName_feature = Root Class Name
 _UI_HomePageType_TOOLS_EDITOR_literal = TOOLS_EDITOR
+_UI_Perspective_overview_feature = Overview
