--- a/org.eclipse.rcpl.model_2_0_0.edit/plugin.properties
+++ b/org.eclipse.rcpl.model_2_0_0.edit/plugin.properties
@@ -2163,3 +2163,6 @@ _UI_HomePage_rootClassName_feature = Root Class Name
 _UI_Addon_rootClassName_feature = Root Class Name
 _UI_HomePageType_TOOLS_EDITOR_literal = TOOLS_EDITOR
 _UI_Perspective_overview_feature = Overview
+_UI_AbstractTool_detailPaneClassName_feature = Detail Pane Class Name
+_UI_AbstractTool_type_feature = Type
+_UI_ToolGroup_groupType_feature = Group Type
