--- a/org.eclipse.rcpl.model_2_0_0.edit/plugin.properties
+++ b/org.eclipse.rcpl.model_2_0_0.edit/plugin.properties
@@ -2166,3 +2166,4 @@ _UI_Perspective_overview_feature = Overview
 _UI_AbstractTool_detailPaneClassName_feature = Detail Pane Class Name
 _UI_AbstractTool_type_feature = Type
 _UI_ToolGroup_groupType_feature = Group Type
+_UI_GroupType_EMPTY_GROUP_BUTTON_literal = EMPTY_GROUP_BUTTON
