--- a/org.eclipse.rcpl.libs/pom.xml
+++ b/org.eclipse.rcpl.libs/pom.xml
@@ -27,6 +27,12 @@
 		</plugins>
 	</build>
 
-
-
+	<dependencies>
+		<dependency>
+			<groupId>org.controlsfx</groupId>
+			<artifactId>controlsfx</artifactId>
+			<version>8.40.14</version>
+		</dependency>
+	</dependencies>
+	
 </project>
