--- a/org.eclipse.rcpl.core/pom.xml
+++ b/org.eclipse.rcpl.core/pom.xml
@@ -65,5 +65,10 @@
 			<artifactId>controlsfx</artifactId>
 			<version>8.40.14</version>
 		</dependency>
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<version>1.4.197</version>
+		</dependency>
 	</dependencies>
 </project>
