--- a/org.eclipse.rcpl.model_2_0_0.edit/plugin.properties
+++ b/org.eclipse.rcpl.model_2_0_0.edit/plugin.properties
@@ -2169,3 +2169,4 @@ _UI_ToolGroup_groupType_feature = Group Type
 _UI_GroupType_EMPTY_GROUP_BUTTON_literal = EMPTY_GROUP_BUTTON
 _UI_AbstractTool_system_feature = System
 _UI_AbstractTool_url_feature = Url
+_UI_AbstractTool_toggleGroup_feature = Toggle Group
