--- a/org.eclipse.rcpl.model_2_0_0.edit/plugin.properties
+++ b/org.eclipse.rcpl.model_2_0_0.edit/plugin.properties
@@ -2170,3 +2170,12 @@ _UI_GroupType_EMPTY_GROUP_BUTTON_literal = EMPTY_GROUP_BUTTON
 _UI_AbstractTool_system_feature = System
 _UI_AbstractTool_url_feature = Url
 _UI_AbstractTool_toggleGroup_feature = Toggle Group
+_UI_Command_type = Command
+_UI_Commands_type = Commands
+_UI_Services_type = Services
+_UI_RCPL_commands_feature = Commands
+_UI_RCPL_services_feature = Services
+_UI_Command_service_feature = Service
+_UI_Commands_children_feature = Children
+_UI_Services_children_feature = Children
+_UI_Service_className_feature = Class Name
