--- a/org.eclipse.rcpl.model_2_0_0.edit/plugin.properties
+++ b/org.eclipse.rcpl.model_2_0_0.edit/plugin.properties
@@ -2179,3 +2179,4 @@ _UI_Command_service_feature = Service
 _UI_Commands_children_feature = Children
 _UI_Services_children_feature = Children
 _UI_Service_className_feature = Class Name
+_UI_AbstractTool_sideToolbarPath_feature = Side Toolbar Path
