--- a/org.eclipse.rcpl.model_2_0_0.edit/plugin.properties
+++ b/org.eclipse.rcpl.model_2_0_0.edit/plugin.properties
@@ -2181,3 +2181,5 @@ _UI_Services_children_feature = Children
 _UI_Service_className_feature = Class Name
 _UI_AbstractTool_sideToolbarPath_feature = Side Toolbar Path
 _UI_AbstractTool_expandToolGroup_feature = Expand Tool Group
+_UI_AbstractTool_hGrow_feature = HGrow
+_UI_AbstractTool_vGrow_feature = VGrow
