--- a/org.eclipse.rcpl.model_2_0_0.edit/plugin.properties
+++ b/org.eclipse.rcpl.model_2_0_0.edit/plugin.properties
@@ -2183,3 +2183,6 @@ _UI_AbstractTool_sideToolbarPath_feature = Side Toolbar Path
 _UI_AbstractTool_expandToolGroup_feature = Expand Tool Group
 _UI_AbstractTool_hGrow_feature = HGrow
 _UI_AbstractTool_vGrow_feature = VGrow
+_UI_ToolType_MATH_EDITOR_literal = MATH_EDITOR
+_UI_ToolType_SVG_EDITOR_literal = SVG_EDITOR
+_UI_ToolType_IMAGE_EDITOR_literal = IMAGE_EDITOR
