--- a/org.eclipse.rcpl.core/.settings/org.eclipse.core.resources.prefs
+++ b/org.eclipse.rcpl.core/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,3 @@
 eclipse.preferences.version=1
+encoding//src/org/eclipse/rcpl/EnLatexMath.java=UTF-8
 encoding//src/org/eclipse/rcpl/internal/util/JOUtil.java=UTF-8
