--- a/org.eclipse.rcpl.model_2_0_0.edit/plugin.properties
+++ b/org.eclipse.rcpl.model_2_0_0.edit/plugin.properties
@@ -2186,3 +2186,4 @@ _UI_AbstractTool_vGrow_feature = VGrow
 _UI_ToolType_MATH_EDITOR_literal = MATH_EDITOR
 _UI_ToolType_SVG_EDITOR_literal = SVG_EDITOR
 _UI_ToolType_IMAGE_EDITOR_literal = IMAGE_EDITOR
+_UI_AbstractTool_widthPercent_feature = Width Percent
