--- a/org.eclipse.rcpl.core/pom.xml
+++ b/org.eclipse.rcpl.core/pom.xml
@@ -80,5 +80,19 @@
 			<artifactId>commons-cli</artifactId>
 			<version>1.2</version>
 		</dependency>
+		<!-- 
+		<dependency>
+			<groupId>org.apache.clerezza.ext</groupId>
+			<artifactId>org.json.simple</artifactId>
+			<version>0.4</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.8.6-SNAPSHOT</version>
+		</dependency>
+		-->
+
+
 	</dependencies>
 </project>
