--- a/org.eclipse.rcpl.model_2_0_0.edit/plugin.properties
+++ b/org.eclipse.rcpl.model_2_0_0.edit/plugin.properties
@@ -2188,3 +2188,7 @@ _UI_ToolType_SVG_EDITOR_literal = SVG_EDITOR
 _UI_ToolType_IMAGE_EDITOR_literal = IMAGE_EDITOR
 _UI_AbstractTool_widthPercent_feature = Width Percent
 _UI_KeyValues_keyvaluesFolder_feature = Keyvalues Folder
+_UI_ToolType_LINE_WIDTH_literal = LINE_WIDTH
+_UI_ToolType_LINE_DASHES_literal = LINE_DASHES
+_UI_ToolType_LINE_ARROWS_literal = LINE_ARROWS
+_UI_ToolType_PATTERN_literal = PATTERN
