--- a/org.eclipse.rcpl.libs/.classpath
+++ b/org.eclipse.rcpl.libs/.classpath
@@ -1,30 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
-	<classpathentry including="**/*.java" kind="src" output="target/classes" path="src2">
-		<attributes>
-			<attribute name="optional" value="true"/>
-			<attribute name="maven.pomderived" value="true"/>
-		</attributes>
-	</classpathentry>
 	<classpathentry excluding="test/java/" kind="src" path="src"/>
-	<classpathentry exported="true" kind="lib" path="lib/mail/javax.mail.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/mail/activation-1.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/logging/commons-logging-1.1.3.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/logging/log4j-1.2.17.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/hessian/hessian-4.0.37.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/poi/commons-codec-1.9.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/poi/ooxml-schemas-1.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/poi/xmlbeans-2.6.0.jar"/>
 	<classpathentry kind="src" output="target/test-classes" path="src/test/java">
 		<attributes>
+			<attribute name="test" value="true"/>
 			<attribute name="optional" value="true"/>
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6">
 		<attributes>
-			<attribute name="module" value="true"/>
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
