--- a/org.eclipse.rcpl.model_2_0_0.edit/plugin.properties
+++ b/org.eclipse.rcpl.model_2_0_0.edit/plugin.properties
@@ -2192,3 +2192,4 @@ _UI_ToolType_LINE_WIDTH_literal = LINE_WIDTH
 _UI_ToolType_LINE_DASHES_literal = LINE_DASHES
 _UI_ToolType_LINE_ARROWS_literal = LINE_ARROWS
 _UI_ToolType_PATTERN_literal = PATTERN
+_UI_ToolType_HIGHLIGHTCOLOR_literal = HIGHLIGHTCOLOR
