--- a/org.eclipse.rcpl.lib/.classpath
+++ b/org.eclipse.rcpl.lib/.classpath
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+	<classpathentry exported="true" kind="lib" path="m2_libs/org/apache/commons/commons-compress/1.18/commons-compress-1.18.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/jlatex.jar"/>
 	<classpathentry exported="true" kind="lib" path="m2_libs/commons-collections/commons-collections/3.2.2/commons-collections-3.2.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="m2_libs/commons-fileupload/commons-fileupload/1.2.2/commons-fileupload-1.2.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="m2_libs/commons-lang/commons-lang/2.6/commons-lang-2.6.jar"/>
 	<classpathentry exported="true" kind="lib" path="m2_libs/commons-logging/commons-logging/1.2/commons-logging-1.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="m2_libs/commons-logging/commons-logging-api/1.1/commons-logging-api-1.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="m2_libs/org/apache/commons/commons-collections4/4.2/commons-collections4-4.2.jar"/>
-	<classpathentry exported="true" kind="lib" path="m2_libs/org/apache/commons/commons-compress/1.9/commons-compress-1.9.jar"/>
+	<classpathentry exported="true" kind="lib" path="m2_libs/org/apache/commons/commons-compress/1.9/commons-compress-1.9.jar" sourcepath="C:/Users/Ramin/.m2/repository/org/apache/commons/commons-compress/1.9/commons-compress-1.9-sources.jar"/>
 	<classpathentry exported="true" kind="lib" path="m2_libs/org/apache/commons/commons-lang3/3.6/commons-lang3-3.6.jar"/>
 	<classpathentry exported="true" kind="lib" path="m2_libs/org/apache/commons/commons-math3/3.2/commons-math3-3.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="m2_libs/org/apache/lucene/3.5.0/lucene-3.5.0.jar"/>
@@ -32,7 +34,7 @@
 	<classpathentry exported="true" kind="lib" path="m2_libs/org/apache/xmlgraphics/batik-script/1.7/batik-script-1.7.jar"/>
 	<classpathentry exported="true" kind="lib" path="m2_libs/org/apache/xmlgraphics/batik-svg-dom/1.7/batik-svg-dom-1.7.jar"/>
 	<classpathentry exported="true" kind="lib" path="m2_libs/org/apache/xmlgraphics/batik-svggen/1.7/batik-svggen-1.7.jar"/>
-	<classpathentry exported="true" kind="lib" path="m2_libs/org/apache/xmlgraphics/batik-transcoder/1.7/batik-transcoder-1.7.jar"/>
+	<classpathentry exported="true" kind="lib" path="m2_libs/org/apache/xmlgraphics/batik-transcoder/1.7/batik-transcoder-1.7.jar" sourcepath="C:/Users/Ramin/.m2/repository/org/apache/xmlgraphics/batik-transcoder/1.7/batik-transcoder-1.7-sources.jar"/>
 	<classpathentry exported="true" kind="lib" path="m2_libs/org/apache/xmlgraphics/batik-util/1.7/batik-util-1.7.jar"/>
 	<classpathentry exported="true" kind="lib" path="m2_libs/org/apache/xmlgraphics/batik-xml/1.10/batik-xml-1.10.jar"/>
 	<classpathentry exported="true" kind="lib" path="m2_libs/org/apache/xmlgraphics/fop/1.0/fop-1.0.jar"/>
@@ -41,7 +43,7 @@
 	<classpathentry exported="true" kind="lib" path="m2_libs/org/jfxtras/jfxtras-labs/8.0-r6/jfxtras-labs-8.0-r6.jar"/>
 	<classpathentry exported="true" kind="lib" path="m2_libs/org/apache/poi/ooxml-schemas/1.4/ooxml-schemas-1.4.jar"/>
 	<classpathentry exported="true" kind="lib" path="m2_libs/org/jfxtras/jfxtras-all/8.0-r6/jfxtras-all-8.0-r6.jar"/>
-	<classpathentry exported="true" kind="lib" path="m2_libs/org/apache/poi/poi-ooxml/4.0.0/poi-ooxml-4.0.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="m2_libs/org/apache/poi/poi-ooxml/4.0.0/poi-ooxml-4.0.0.jar" sourcepath="C:/Users/Ramin/.m2/repository/org/apache/poi/poi-ooxml/4.0.0/poi-ooxml-4.0.0-sources.jar"/>
 	<classpathentry exported="true" kind="lib" path="m2_libs/org/controlsfx/controlsfx/8.40.14/controlsfx-8.40.14.jar"/>
 	<classpathentry exported="true" kind="lib" path="m2_libs/org/apache/poi/poi/4.0.0/poi-4.0.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="m2_libs/org/apache/poi/poi-ooxml-schemas/4.0.0/poi-ooxml-schemas-4.0.0.jar"/>
