--- a/org.eclipse.rcpl.lib/build.properties
+++ b/org.eclipse.rcpl.lib/build.properties
@@ -48,4 +48,6 @@ bin.includes = META-INF/,\
                m2_libs/org/apache/commons/commons-compress/1.9/commons-compress-1.9.jar,\
                m2_libs/org/apache/commons/commons-lang3/3.6/commons-lang3-3.6.jar,\
                m2_libs/org/apache/commons/commons-math3/3.2/commons-math3-3.2.jar,\
-               m2_libs/org/apache/lucene/3.5.0/lucene-3.5.0.jar
+               m2_libs/org/apache/lucene/3.5.0/lucene-3.5.0.jar,\
+               lib/jlatex.jar,\
+               m2_libs/org/apache/commons/commons-compress/1.18/commons-compress-1.18.jar
