--- a/org.eclipse.fx.emf.databinding/.classpath
+++ b/org.eclipse.fx.emf.databinding/.classpath
@@ -11,5 +11,6 @@
 			<accessrule kind="accessible" pattern="javafx/beans/property/**"/>
 		</accessrules>
 	</classpathentry>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/JavaFX11"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
