--- a/org.eclipse.rcpl.core/.classpath
+++ b/org.eclipse.rcpl.core/.classpath
@@ -12,6 +12,6 @@
 		</accessrules>
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/JavaFX11"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/JAVAFX"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
