--- a/org.eclipse.rcpl.test/.classpath
+++ b/org.eclipse.rcpl.test/.classpath
@@ -12,7 +12,7 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/JavaFX11">
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/JAVAFX">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
