--- a/org.eclipse.rcpl.lib/.classpath
+++ b/org.eclipse.rcpl.lib/.classpath
@@ -1,26 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+	<classpathentry exported="true" kind="lib" path="m2_libs/org/jsoup/jsoup/1.11.3/jsoup-1.11.3.jar"/>
+	<classpathentry exported="true" kind="lib" path="m2_libs/org/apache/commons/commons-lang3/3.1/commons-lang3-3.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="m2_libs/commons-codec/commons-codec/1.10/commons-codec-1.10.jar"/>
 	<classpathentry exported="true" kind="lib" path="m2_libs/org/apache/commons/commons-compress/1.18/commons-compress-1.18.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/jlatex.jar"/>
 	<classpathentry exported="true" kind="lib" path="m2_libs/commons-collections/commons-collections/3.2.2/commons-collections-3.2.2.jar"/>
-	<classpathentry exported="true" kind="lib" path="m2_libs/commons-fileupload/commons-fileupload/1.2.2/commons-fileupload-1.2.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="m2_libs/commons-lang/commons-lang/2.6/commons-lang-2.6.jar"/>
 	<classpathentry exported="true" kind="lib" path="m2_libs/commons-logging/commons-logging/1.2/commons-logging-1.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="m2_libs/commons-logging/commons-logging-api/1.1/commons-logging-api-1.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="m2_libs/org/apache/commons/commons-collections4/4.2/commons-collections4-4.2.jar"/>
-	<classpathentry exported="true" kind="lib" path="m2_libs/org/apache/commons/commons-compress/1.9/commons-compress-1.9.jar" sourcepath="C:/Users/Ramin/.m2/repository/org/apache/commons/commons-compress/1.9/commons-compress-1.9-sources.jar"/>
-	<classpathentry exported="true" kind="lib" path="m2_libs/org/apache/commons/commons-lang3/3.6/commons-lang3-3.6.jar"/>
 	<classpathentry exported="true" kind="lib" path="m2_libs/org/apache/commons/commons-math3/3.2/commons-math3-3.2.jar"/>
-	<classpathentry exported="true" kind="lib" path="m2_libs/org/apache/lucene/3.5.0/lucene-3.5.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="m2_libs/commons-io/commons-io/2.6/commons-io-2.6.jar"/>
 	<classpathentry exported="true" kind="lib" path="m2_libs/com/caucho/hessian/4.0.51/hessian-4.0.51.jar"/>
 	<classpathentry exported="true" kind="lib" path="m2_libs/javax/mail/mail/1.4.7/mail-1.4.7.jar"/>
 	<classpathentry exported="true" kind="lib" path="m2_libs/com/warrenstrange/googleauth/1.1.5/googleauth-1.1.5.jar"/>
 	<classpathentry exported="true" kind="lib" path="m2_libs/com/google/zxing/core/3.2.1/core-3.2.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="m2_libs/com/google/zxing/javase/3.2.1/javase-3.2.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="m2_libs/commons-codec/commons-codec/1.9/commons-codec-1.9.jar"/>
 	<classpathentry exported="true" kind="lib" path="m2_libs/org/jpedal/OpenViewerFX/7.12.28/OpenViewerFX-7.12.28.jar"/>
-	<classpathentry exported="true" kind="lib" path="m2_libs/org/jsoup/jsoup/1.8.3/jsoup-1.8.3.jar"/>
 	<classpathentry exported="true" kind="lib" path="m2_libs/org/apache/xmlgraphics/batik-codec/1.7/batik-codec-1.7.jar"/>
 	<classpathentry exported="true" kind="lib" path="m2_libs/org/apache/xmlgraphics/batik-constants/1.10/batik-constants-1.10.jar"/>
 	<classpathentry exported="true" kind="lib" path="m2_libs/org/apache/xmlgraphics/batik-css/1.7/batik-css-1.7.jar"/>
@@ -46,10 +43,13 @@
 	<classpathentry exported="true" kind="lib" path="m2_libs/org/apache/poi/poi-ooxml/4.0.0/poi-ooxml-4.0.0.jar" sourcepath="C:/Users/Ramin/.m2/repository/org/apache/poi/poi-ooxml/4.0.0/poi-ooxml-4.0.0-sources.jar"/>
 	<classpathentry exported="true" kind="lib" path="m2_libs/org/controlsfx/controlsfx/8.40.14/controlsfx-8.40.14.jar"/>
 	<classpathentry exported="true" kind="lib" path="m2_libs/org/apache/poi/poi/4.0.0/poi-4.0.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="m2_libs/org/apache/poi/poi-ooxml-schemas/4.0.0/poi-ooxml-schemas-4.0.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="m2_libs/commons-cli/commons-cli/1.2/commons-cli-1.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="m2_libs/org/apache/xmlbeans/xmlbeans/3.0.1/xmlbeans-3.0.1.jar"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-10"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-10">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="output" path="bin"/>
