--- a/org.eclipse.rcpl.lib/build.properties
+++ b/org.eclipse.rcpl.lib/build.properties
@@ -50,4 +50,7 @@ bin.includes = META-INF/,\
                m2_libs/org/apache/commons/commons-math3/3.2/commons-math3-3.2.jar,\
                m2_libs/org/apache/lucene/3.5.0/lucene-3.5.0.jar,\
                lib/jlatex.jar,\
-               m2_libs/org/apache/commons/commons-compress/1.18/commons-compress-1.18.jar
+               m2_libs/org/apache/commons/commons-compress/1.18/commons-compress-1.18.jar,\
+               m2_libs/commons-codec/commons-codec/1.10/commons-codec-1.10.jar,\
+               m2_libs/org/apache/commons/commons-lang3/3.1/commons-lang3-3.1.jar,\
+               m2_libs/org/jsoup/jsoup/1.11.3/jsoup-1.11.3.jar
