--- a/org.eclipse.rcpl.model_2_0_0.edit/plugin.properties
+++ b/org.eclipse.rcpl.model_2_0_0.edit/plugin.properties
@@ -2193,3 +2193,5 @@ _UI_ToolType_LINE_DASHES_literal = LINE_DASHES
 _UI_ToolType_LINE_ARROWS_literal = LINE_ARROWS
 _UI_ToolType_PATTERN_literal = PATTERN
 _UI_ToolType_HIGHLIGHTCOLOR_literal = HIGHLIGHTCOLOR
+_UI_AbstractTool_commands_feature = Commands
+_UI_AbstractTool_command_feature = Command
