--- a/org.eclipse.rcpl.lib/build.properties
+++ b/org.eclipse.rcpl.lib/build.properties
@@ -53,4 +53,20 @@ bin.includes = META-INF/,\
                m2_libs/org/apache/commons/commons-compress/1.18/commons-compress-1.18.jar,\
                m2_libs/commons-codec/commons-codec/1.10/commons-codec-1.10.jar,\
                m2_libs/org/apache/commons/commons-lang3/3.1/commons-lang3-3.1.jar,\
-               m2_libs/org/jsoup/jsoup/1.11.3/jsoup-1.11.3.jar
+               m2_libs/org/jsoup/jsoup/1.11.3/jsoup-1.11.3.jar,\
+               m2_libs/org/apache/xmlgraphics/batik-bridge/1.10/batik-bridge-1.10.jar,\
+               m2_libs/xml-apis/xml-apis/1.3.04/xml-apis-1.3.04.jar,\
+               m2_libs/xml-apis/xml-apis-ext/1.3.04/xml-apis-ext-1.3.04.jar,\
+               m2_libs/org/apache/xmlgraphics/batik-anim/1.10/batik-anim-1.10.jar,\
+               m2_libs/org/apache/xmlgraphics/batik-awt-util/1.10/batik-awt-util-1.10.jar,\
+               m2_libs/org/apache/xmlgraphics/batik-codec/1.10/batik-codec-1.10.jar,\
+               m2_libs/org/apache/xmlgraphics/batik-css/1.10/batik-css-1.10.jar,\
+               m2_libs/org/apache/xmlgraphics/batik-dom/1.10/batik-dom-1.10.jar,\
+               m2_libs/org/apache/xmlgraphics/batik-ext/1.10/batik-ext-1.10.jar,\
+               m2_libs/org/apache/xmlgraphics/batik-gvt/1.10/batik-gvt-1.10.jar,\
+               m2_libs/org/apache/xmlgraphics/batik-parser/1.10/batik-parser-1.10.jar,\
+               m2_libs/org/apache/xmlgraphics/batik-script/1.10/batik-script-1.10.jar,\
+               m2_libs/org/apache/xmlgraphics/batik-svg-dom/1.10/batik-svg-dom-1.10.jar,\
+               m2_libs/org/apache/xmlgraphics/batik-svggen/1.10/batik-svggen-1.10.jar,\
+               m2_libs/org/apache/xmlgraphics/batik-transcoder/1.10/batik-transcoder-1.10.jar,\
+               m2_libs/org/apache/xmlgraphics/batik-util/1.10/batik-util-1.10.jar
