--- a/org.eclipse.rcpl.model_2_0_0.edit/plugin.properties
+++ b/org.eclipse.rcpl.model_2_0_0.edit/plugin.properties
@@ -2195,3 +2195,13 @@ _UI_ToolType_PATTERN_literal = PATTERN
 _UI_ToolType_HIGHLIGHTCOLOR_literal = HIGHLIGHTCOLOR
 _UI_AbstractTool_commands_feature = Commands
 _UI_AbstractTool_command_feature = Command
+_UI_Navigator_type = Navigator
+_UI_NavigatorItem_type = Navigator Item
+_UI_Navigators_type = Navigators
+_UI_RCPL_navigators_feature = Navigators
+_UI_Navigator_navigatoritems_feature = Navigatoritems
+_UI_Navigator_context_feature = Context
+_UI_NavigatorItem_adaptFrom_feature = Adapt From
+_UI_NavigatorItem_adaptTo_feature = Adapt To
+_UI_Navigators_navigators_feature = Navigators
+_UI_Command_dialogClassName_feature = Dialog Class Name
